--- a/src/templates/ordering.html
+++ b/src/templates/ordering.html
@@ -54,69 +54,6 @@ title: ordering
 								</div>
 								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 							</div>
-							<div class="cart__item">
-								<div class="cart__col cart__product">
-									<div class="cart__img">
-										<img src="img/cart-img-00.png" alt="img">
-									</div>
-									<div class="cart__info">
-										<div class="cart__name">Johnnie Walker Red Rye Finish, 1 л</div>
-										<div class="cart__categories">Виски</div>
-									</div>
-									<a href="#" class="cart__close"><i class="icon icon-close-gray"></i></a>
-								</div>
-								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
-								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
-								</div>
-								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
-							</div>
-							<div class="cart__item">
-								<div class="cart__col cart__product">
-									<div class="cart__img">
-										<img src="img/cart-img-00.png" alt="img">
-									</div>
-									<div class="cart__info">
-										<div class="cart__name">Johnnie Walker Red Rye Finish, 1 л</div>
-										<div class="cart__categories">Виски</div>
-									</div>
-									<a href="#" class="cart__close"><i class="icon icon-close-gray"></i></a>
-								</div>
-								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
-								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
-								</div>
-								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
-							</div>
-							<div class="cart__item">
-								<div class="cart__col cart__product">
-									<div class="cart__img">
-										<img src="img/cart-img-00.png" alt="img">
-									</div>
-									<div class="cart__info">
-										<div class="cart__name">Johnnie Walker Red Rye Finish, 1 л</div>
-										<div class="cart__categories">Виски</div>
-									</div>
-									<a href="#" class="cart__close"><i class="icon icon-close-gray"></i></a>
-								</div>
-								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
-								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
-								</div>
-								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
-							</div>
 						</div>
 					</div>
 					<div class="cart__result">
@@ -145,7 +82,7 @@ title: ordering
 					<!-- steps END -->
 					<form action="/" class="form form-step">
 						<div class="row form__row">
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Ваше имя*</div>
 									<div class="form-item__input">
@@ -158,11 +95,8 @@ title: ordering
 										<input type="text" class="input error">
 									</div>
 								</div>
-								<div class="form__bottom form__bottom_right">
-									<a href="#" class="form__link">Я постоянный клиент</a>
-								</div>
 							</div>
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Телефон*</div>
 									<div class="form-item__input">
@@ -175,7 +109,14 @@ title: ordering
 										<input type="text" class="input">
 									</div>
 								</div>
+							</div>
+							<div class="col col-6 col-xs-12 form__col form__col_right">
 								<button class="btn btn_large btn_block">Далее</button>
+							</div>
+							<div class="col col-6 col-xs-12 form__col">
+								<div class="form__bottom form__bottom_right">
+									<a href="#" class="form__link">Я постоянный клиент</a>
+								</div>
 							</div>
 						</div>
 					</form>
@@ -188,7 +129,7 @@ title: ordering
 					<!-- steps END -->
 					<form action="/" class="form form-step">
 						<div class="row form__row">
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Город</div>
 									<select class="select select_lg">
@@ -230,7 +171,7 @@ title: ordering
 									</div>
 								</div>
 							</div>
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Варианты доставки</div>
 									<select class="select select_lg">
@@ -264,7 +205,7 @@ title: ordering
 					<!-- steps END -->
 					<form action="/" class="form form-step">
 						<div class="row form__row">
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-sm-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Контактные данные</div>
 									<ul class="confirmation confirmation_sm">
@@ -275,7 +216,7 @@ title: ordering
 									</ul>
 								</div>
 							</div>
-							<div class="col col-6 form__col">
+							<div class="col col-6 col-sm-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Информация о доставке</div>
 									<ul class="confirmation">
