--- a/src/templates/subcategory.html
+++ b/src/templates/subcategory.html
@@ -31,7 +31,7 @@ title: subcategory
 		<div class="subcategory">
 			<div class="inner">
 				<div class="row">
-					<div class="col col-3">
+					<div class="col col-3 col-sm-12">
 						<aside class="aside">
 							<div class="aside__title">Выбрать виски</div>
 							<div class="filter">
@@ -156,7 +156,7 @@ title: subcategory
 							</div>
 						</aside>
 					</div>
-					<div class="col col-9">
+					<div class="col col-9 col-sm-12">
 						<div class="subcategory_right">
 							<div class="row">
 								<div class="col col-12">
@@ -170,7 +170,7 @@ title: subcategory
 										</ul>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -195,7 +195,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -220,7 +220,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -245,7 +245,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -270,7 +270,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -295,7 +295,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -320,7 +320,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -345,7 +345,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -370,7 +370,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -395,7 +395,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -420,7 +420,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
@@ -445,7 +445,7 @@ title: subcategory
 										</div>
 									</div>
 								</div>
-								<div class="col col-4">
+								<div class="col col-4 col-md-6 col-sm-4 col-xs-6 col-xxs-12">
 									<div class="item">
 										<div class="item__wrapper">
 											<div class="item__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
