--- a/src/sass/part/_main.sass
+++ b/src/sass/part/_main.sass
@@ -678,7 +678,7 @@
 // card
 .card
 	padding: 80px 0
-	display: none
+	// display: none
 	&__breadcrumbs
 		margin-bottom: 25px
 		li
@@ -918,7 +918,7 @@
 .cart
 	margin-bottom: 80px
 	font-size: 0
-	display: none
+	// display: none
 	&__title
 		font-size: 24px
 		font-weight: 700
