--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -303,7 +303,7 @@ h4
 	z-index: 9999
 	+vertical
 	overflow-y: auto
-	display: none
+	// display: none
 	&__inner
 		display: inline-block
 		vertical-align: middle
