--- a/src/templates/ordering.html
+++ b/src/templates/ordering.html
@@ -54,6 +54,69 @@ title: ordering
 								</div>
 								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 							</div>
+							<div class="cart__item">
+								<div class="cart__col cart__product">
+									<div class="cart__img">
+										<img src="img/cart-img-00.png" alt="img">
+									</div>
+									<div class="cart__info">
+										<div class="cart__name">Johnnie Walker Red Rye Finish, 1 л</div>
+										<div class="cart__categories">Виски</div>
+									</div>
+									<a href="#" class="cart__close"><i class="icon icon-close-gray"></i></a>
+								</div>
+								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
+								<div class="cart__col cart__qua">
+									<select class="select cart__select">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
+								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
+							</div>
+							<div class="cart__item">
+								<div class="cart__col cart__product">
+									<div class="cart__img">
+										<img src="img/cart-img-00.png" alt="img">
+									</div>
+									<div class="cart__info">
+										<div class="cart__name">Johnnie Walker Red Rye Finish, 1 л</div>
+										<div class="cart__categories">Виски</div>
+									</div>
+									<a href="#" class="cart__close"><i class="icon icon-close-gray"></i></a>
+								</div>
+								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
+								<div class="cart__col cart__qua">
+									<select class="select cart__select">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
+								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
+							</div>
+							<div class="cart__item">
+								<div class="cart__col cart__product">
+									<div class="cart__img">
+										<img src="img/cart-img-00.png" alt="img">
+									</div>
+									<div class="cart__info">
+										<div class="cart__name">Johnnie Walker Red Rye Finish, 1 л</div>
+										<div class="cart__categories">Виски</div>
+									</div>
+									<a href="#" class="cart__close"><i class="icon icon-close-gray"></i></a>
+								</div>
+								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
+								<div class="cart__col cart__qua">
+									<select class="select cart__select">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
+								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
+							</div>
 						</div>
 					</div>
 					<div class="cart__result">
