--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -12,7 +12,26 @@ title: card
 		<div class="card">
 			<div class="inner">
 				<div class="row">
-					<div class="col col-6">
+					<div class="card__top">
+						<ul class="breadcrumbs card__breadcrumbs">
+							<li><a href="#">Главная</a></li>
+							<li><a href="#">Крепкие напитки</a></li>
+							<li><a href="#">Виски</a></li>
+							<li class="current"><a href="#">“Jack Daniel’s” Tennessee Honey, 0.7 л</a></li>
+						</ul>
+						<div class="card__title">"Jack Daniel’s" Tennessee Honey, 0.7 л</div>
+						<div class="card__rate">
+							<ul class="rate rate_big">
+								<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
+								<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
+								<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
+								<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
+								<li><a href="#"><i class="icon icon-star-big"></i></a></li>
+							</ul>
+							<div class="number">43 отзыва</div>
+						</div>
+					</div>
+					<div class="card__case">
 						<div class="case">
 							<div class="case__wrapper">
 								<div class="case__nav">
@@ -32,71 +51,52 @@ title: card
 							<div class="case__sticker case__sticker_orange">акция</div>
 						</div>
 					</div>
-					<div class="col col-6">
-						<div class="card__content">
-							<ul class="breadcrumbs card__breadcrumbs">
-								<li><a href="#">Главная</a></li>
-								<li><a href="#">Крепкие напитки</a></li>
-								<li><a href="#">Виски</a></li>
-								<li class="current"><a href="#">“Jack Daniel’s” Tennessee Honey, 0.7 л</a></li>
-							</ul>
-							<div class="card__title">"Jack Daniel’s" Tennessee Honey, 0.7 л</div>
-							<div class="card__rate">
-								<ul class="rate rate_big">
-									<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star-big"></i></a></li>
-									<li><a href="#"><i class="icon icon-star-big"></i></a></li>
-								</ul>
-								<div class="number">43 отзыва</div>
-							</div>
-							<div class="card__des">
-								<div class="row">
-									<div class="col col-6">
-										<ul class="card__list">
-											<li><span class="left">Регион:</span><span class="right">США</span></li>
-											<li><span class="left">Бренд:</span><span class="right">Jack Daniel’s</span></li>
-											<li><span class="left">Вид:</span><span class="right">Теннесси</span></li>
-											<li><span class="left">Крепость:</span><span class="right">35%</span></li>
-										</ul>
-									</div>
-									<div class="col col-6">
-										<div class="card__selects">
-											<div class="card__select">
-												<select class="select">
-													<option>0.7 литров</option>
-													<option>1 литр</option>
-													<option>2 литра</option>
-												</select>
-												<span>Объем:</span>
-											</div>
-											<div class="card__select">
-												<select class="select">
-													<option>1 бутылка</option>
-													<option>2 бутылки</option>
-													<option>3 бутылки</option>
-												</select>
-												<span>Количество:</span>
-											</div>
+					<div class="card__content">
+						<div class="card__des">
+							<div class="row">
+								<div class="col col-6">
+									<ul class="card__list">
+										<li><span class="left">Регион:</span><span class="right">США</span></li>
+										<li><span class="left">Бренд:</span><span class="right">Jack Daniel’s</span></li>
+										<li><span class="left">Вид:</span><span class="right">Теннесси</span></li>
+										<li><span class="left">Крепость:</span><span class="right">35%</span></li>
+									</ul>
+								</div>
+								<div class="col col-6">
+									<div class="card__selects">
+										<div class="card__select">
+											<select class="select">
+												<option>0.7 литров</option>
+												<option>1 литр</option>
+												<option>2 литра</option>
+											</select>
+											<span>Объем:</span>
+										</div>
+										<div class="card__select">
+											<select class="select">
+												<option>1 бутылка</option>
+												<option>2 бутылки</option>
+												<option>3 бутылки</option>
+											</select>
+											<span>Количество:</span>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="card__price">
-								<span class="card__price_default">518 грн</span>
-								<span class="card__price_old">723 грн</span>
-							</div>
-							<div class="card__btn">
-								<a href="#" class="btn-add">
-									<i class="icon icon-hearth"></i>
-									<span>Добавить в избранное</span>
-								</a>
-								<a href="#" class="btn btn_large btn_icon">
-									<i class="icon icon-basket"></i>
-									<span>в корзину</span>
-								</a>
-							</div>
+						</div>
+						<div class="card__price">
+							<span class="card__price_default">518 грн</span>
+							<span class="card__price_old">723 грн</span>
+						</div>
+						<div class="card__btn">
+							<a href="#" class="btn-add">
+								<i class="icon icon-hearth"></i>
+								<span>Добавить в избранное</span>
+							</a>
+							<a href="#" class="btn btn_large btn_icon">
+								<i class="icon icon-basket"></i>
+								<span>в корзину</span>
+							</a>
 						</div>
 					</div>
 				</div>
